<resources>
    <string name="app_name">MyCoin</string>
    <string name="c">C</string>
    <string name="welcome_to_coinomy">Welcome to Coinomy</string>
    <string name="track_save_grow">Track. Save. Grow.</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember Me</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account_register">Don\'t have an account? Register</string>
    <string name="add_transaction">Add Transaction</string>
    <string name="skip">Skip</string>
    <string name="next">Next</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="clear">Clear</string>
    <string name="_0">0</string>
    <string name="delete">Delete</string>
    <string name="create_account">Create Account</string>
    <string name="join_coinomy_today">Join Coinomy Today</string>
    <string name="userN">Username</string>
    <string name="email1">Email</string>
    <string name="password1">Password</string>
    <string name="already_have_an_account_login1">Already have an account? Login</string>
    <string name="register1">Register</string>
    <string name="edit_profile">Edit Profile</string>
</resources>